Added functionality to open the ticket website by clicking on the event division instead of the ticket info link.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,12 @@ a {
     font-weight: bold;
 }
 
+.venueName {
+    color: #6f0c3f;
+    font-size: 1.2em;
+    font-weight: bold;
+}
+
 /* adjust the width of the container according to the screen size */
 /* extra small screen */
 @media screen and (max-width: 575px) {
