--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,3 +93,14 @@ a {
         width: 45%;
     }
 }
+
+.center {
+    display: block;
+    /* margin-top: 20px; */
+    /* margin-bottom: 10px; */
+    margin-left: auto;
+    margin-right: auto;
+    height: 200px;
+    width: 225px;
+   
+  }
