--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,7 +94,7 @@ a {
     }
 }
 
-.center {
+/* .center {
     display: block;
     /* margin-top: 20px; */
     /* margin-bottom: 10px; */
@@ -103,4 +103,4 @@ a {
     height: 200px;
     width: 225px;
    
-  }
+  } */
